# TreeMath

./: .gitignore  CMakeLists.txt  CNode.cpp  CNode.h  CTree.cpp  CTree.h  EmptyTreeException.cpp  EmptyTreeException.h  FileReader.cpp  FileReader.h  GeneticProgramming.cpp  GeneticProgramming.h  Interface.cpp  Interface.h  RandomNodeGenerator.cpp  RandomNodeGenerator.h  RandomTreeGenerator.cpp  RandomTreeGenerator.h  SmiesznaKlasa.cpp  SmiesznaKlasa.h  StringUtils.cpp  StringUtils.h  StringValidator.cpp  StringValidator.h  TreeMath.cbp  WrongVariablesValuesAmountException.cpp  WrongVariablesValuesAmountException.h  main.cpp
